# eg-basics

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: pull_request_template.md  template-challenges-issue.md
src/: main  main.cpp  player.cpp  player.h
src/character/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/core/: Game.cpp  Game.h  Window.cpp  Window.h
src/graphics/: Sprite.cpp  Sprite.h
